vlib/v/checker/tests/bin_lit_wrong_digit_err.out
vlib/v/checker/tests/bin_lit_wrong_digit_err.v:2:18: error: this binary number has unsuitable digit `2`
    1 | fn main() {
    2 |     println(0b1112)
      |                  ^
    3 | }
