vlib/v/checker/tests/bin_lit_wrong_digit_err.vv
fn main() {
    println(0b1112)
}
